add layouts for `tag` tab

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,9 +7,9 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="net.htlgrieskirchen.at.jeschl17.nfcdroid.ui.profiles.ProfilesFragment"
+        android:name="net.htlgrieskirchen.at.jeschl17.nfcdroid.ui.tags.TagsFragment"
         android:label="@string/title_profiles"
-        tools:layout="@layout/fragment_profiles" />
+        tools:layout="@layout/fragment_Tags" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
