--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
-        android:layout_height="55dp"
+        android:layout_height="60dp"
         android:background="#F3F3F3"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -28,12 +28,13 @@
 
         <LinearLayout
             android:id="@+id/tab_tags"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="left"
             android:layout_weight="1"
-            android:orientation="vertical"
-            android:paddingTop="3dp">
+            android:background="?android:attr/selectableItemBackground"
+            android:gravity="center_vertical"
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/image_tab_tags"
@@ -52,12 +53,13 @@
 
         <LinearLayout
             android:id="@+id/tab_scan"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"
-            android:orientation="vertical"
-            android:paddingTop="3dp">
+            android:background="?android:attr/selectableItemBackground"
+            android:gravity="center_vertical"
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/image_tab_scan"
@@ -76,12 +78,13 @@
 
         <LinearLayout
             android:id="@+id/tab_settings"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="right"
             android:layout_weight="1"
-            android:orientation="vertical"
-            android:paddingTop="3dp">
+            android:background="?android:attr/selectableItemBackground"
+            android:gravity="center_vertical"
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/image_tab_settings"
