--- a/app/src/main/res/layout/acticvity_custom_profile.xml
+++ b/app/src/main/res/layout/acticvity_custom_profile.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:focusable="true"
+    android:focusableInTouchMode="true" >
 
     <EditText
         android:id="@+id/text_tag-name"
@@ -16,7 +18,9 @@
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:nextFocusUp="@id/text_tag-name"
+        android:nextFocusLeft="@id/text_tag-name" />
 
     <Button
         android:id="@+id/button_save_tag"
