--- a/app/src/main/res/layout/activity_data_type.xml
+++ b/app/src/main/res/layout/activity_data_type.xml
@@ -14,6 +14,7 @@
         android:orientation="vertical">
 
         <LinearLayout
+            android:id="@+id/layout_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -58,7 +59,9 @@
                 android:background="#C2C2C2" />
 
         </LinearLayout>
+
         <LinearLayout
+            android:id="@+id/layout_website_link"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -102,7 +105,9 @@
                 android:layout_weight="1"
                 android:background="#C2C2C2" />
         </LinearLayout>
+
         <LinearLayout
+            android:id="@+id/layout_android_app"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -146,7 +151,9 @@
                 android:layout_weight="1"
                 android:background="#C2C2C2" />
         </LinearLayout>
+
         <LinearLayout
+            android:id="@+id/layout_contact"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -190,7 +197,9 @@
                 android:layout_weight="1"
                 android:background="#C2C2C2" />
         </LinearLayout>
+
         <LinearLayout
+            android:id="@+id/layout_location"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -234,7 +243,9 @@
                 android:layout_weight="1"
                 android:background="#C2C2C2" />
         </LinearLayout>
+
         <LinearLayout
+            android:id="@+id/location_wifi_network"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -278,51 +289,9 @@
                 android:layout_weight="1"
                 android:background="#C2C2C2" />
         </LinearLayout>
+
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="3dp"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    app:srcCompat="@drawable/icons8_bluetooth_2_96" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="7dp"
-                        android:text="@string/bluetooth_connection"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="9dp"
-                        android:text="@string/add_bluetooth_connection"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_weight="1"
-                android:background="#C2C2C2" />
-        </LinearLayout>
-        <LinearLayout
+            android:id="@+id/layout_custom_data"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
