--- a/app/src/main/res/layout/activity_website_link.xml
+++ b/app/src/main/res/layout/activity_website_link.xml
@@ -20,7 +20,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_margin="5dp"
-            app:srcCompat="@drawable/icons8_document" />
+            app:srcCompat="@drawable/icons8_website_96" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -28,7 +28,7 @@
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="10dp"
             android:layout_weight="1"
-            android:text="@string/enter_text"
+            android:text="@string/enter_link"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
     </LinearLayout>
 
@@ -80,7 +80,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
-        android:hint="@string/text"
+        android:hint="@string/link_example"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
