--- a/app/src/main/res/layout/activity_license.xml
+++ b/app/src/main/res/layout/activity_license.xml
@@ -29,7 +29,9 @@
                 android:id="@+id/textView7"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginRight="8dp"
                 android:text="@string/glp3_preamble"
                 android:typeface="monospace" />
 
@@ -37,9 +39,11 @@
                 android:id="@+id/textView6"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
                 android:layout_marginTop="8dp"
-                android:typeface="monospace"
-                android:text="@string/glp3_content_terms" />
+                android:layout_marginRight="8dp"
+                android:text="@string/glp3_content_terms"
+                android:typeface="monospace" />
         </LinearLayout>
     </ScrollView>
 
